--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.2d.spriteshape": "10.0.2",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.1.0",
+    "com.unity.connect.share": "4.2.3",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.feature.development": "1.0.2",
     "com.unity.inputsystem": "1.7.0",
